# fastapi-adapter

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md
fastapi_adapter/: controller.py  main.py  models.py  routes.py
scripts/: config.json  dev.py  format.sh  lint.sh  openapi.py
search/: search_index.json
site/: 404.html  index.html  openapi.yaml
site/search/: search_index.json
tests/: test_fastapi_adapter.py
